# video_pipeline

./: .gitignore  CMakeLists.txt  Readme.md
cmakes/: FindFFmpeg.cmake  base.cmake  cuda.cmake  tensorrt.cmake
configure/: pipeline_sample.json  pipeline_sample_3D_classification.json  pipeline_sample_classification.json  pipeline_sample_infer.json  pipeline_sample_segment.json  pipeline_sample_video.json  pipeline_welding.json  pipeline_welding_classification.json  pipeline_welding_part.json
configure/cfg_nodes/: cache.json  fcn.json  i3d.json  laser_welding.json  laser_welding_depth.json  laser_welding_stable.json  resnet.json  track.json  videosrc.json  yolo.json  yolov7_tiny_grid.json
demo/: main.cpp  test.cpp  welding.cpp
docs/: Configuration_File_User_Guide.md
src/: CMakeLists.txt
src/Eigen/: Cholesky.hpp  Jacobi.hpp  LU.hpp
src/backend/: AbstractEngine.h  EngineFactory.h  ONNXEngine.cpp  ONNXEngine.h  TRTEngine.cpp  TRTEngine.h
src/common/: AbstractNode.h  BaseData.h  Blob.h  CategoryDefine.h  CommonDefine.h  ConfigData.h  ControlData.h  ExtraData.cpp  ExtraData.h  FlowMetaData.h  FrameData.cpp  FrameData.h  Function.h  NodeFactory.h  NodeParam.h  Shape.h  StatusCode.h  ThreadSaveQueue.h
src/common/memory/: BaseAllocator.h  DevAllocator.cpp  DevAllocator.h  MallocAllocator.h  SyncedMemory.cpp  SyncedMemory.h
src/cuda_kernels/: CudaPreProcess.cu  CudaPreProcess.h
src/nodes/: BaseNode.cpp  BaseNode.h
src/nodes/cache_nodes/: CacheNode.cpp  CacheNode.h  ImageCacheNode.cpp  ImageCacheNode.h  PreProcessor.cpp  PreProcessor.h  PreProcessor_cu.cpp  cimg_util.cpp  cuda_util.cpp
src/nodes/event_nodes/: WeldEventNode.cpp  WeldEventNode.h
src/nodes/infer_nodes/: ClassifyPostProcessor.cpp  ClassifyPostProcessor.h  InferDefine.h  InferNode.cpp  InferNode.h  PostProcessor.h  PreProcessor.cpp  PreProcessor.h  PreProcessor_cu.cpp  YoloGridPostProcessor.cpp  YoloGridPostProcessor.h
src/nodes/infer_nodes/postprocess/: ClassifyPostProcessor.cpp  ClassifyPostProcessor.h  SegmentPostProcessor.cpp  SegmentPostProcessor.h  YoloGridPostProcessor.cpp  YoloGridPostProcessor.h
src/nodes/src_nodes/: ImageSrcNode.cpp  ImageSrcNode.h  VideoSrcNode.cpp  VideoSrcNode.h
src/nodes/track_nodes/: TrackNode.cpp  TrackNode.h
src/nodes/track_nodes/sort/: kalman_filter.cpp  kalman_filter.h  matrix.cpp  matrix.h  munkres.cpp  munkres.h  track.cpp  track.h  tracker.cpp  tracker.h  utils.h
src/pipeline/: Pipeline.cpp  Pipeline.h
src/public/: ControlData.h  PublicData.h  PublicPipeline.h
tools/: export.json  index.html  readme.md  transform_json.py
